--- a/sass/main.scss
+++ b/sass/main.scss
@@ -19,3 +19,5 @@
 @import 'pages/tenderdetails';
 @import 'pages/joblisting';
 @import 'pages/joblistingdetails';
+@import 'pages/managepost';
+@import 'pages/post';
